// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput Component > インプットエリアをカスタムプロパティでレンダリング 1`] = `
<div>
  <input
    class="input test-style test-color test-size"
    placeholder="test-placeholder"
    type="text"
  />
</div>
`;

exports[`TextInput Component > インプットエリアをデフォルトプロパティでレンダリング 1`] = `
<div>
  <input
    class="input input-bordered input-primary input-md"
    placeholder="Input here"
    type="text"
  />
</div>
`;
